DEMO/Backends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo1
spec:
  selector:
    matchLabels:
      app: echo1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
        - name: echo
          image: quay.io/fgiudici/echo:v0.4.1
          args: ["-H", "X-Deployment:echo1"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo1
  labels:
    app: echo1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: echo1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo2
spec:
  selector:
    matchLabels:
      app: echo2
  replicas: 1
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
        - name: echo
          image: quay.io/fgiudici/echo:v0.4.1
          args: ["-H", "X-Deployment:echo2"]
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: echo2
  labels:
    app: echo2
spec:
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 80
  selector:
    app: echo2
