DEMO/03-Gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: zonkey-gw
spec:
  gatewayClassName: hybrid-kong
  listeners:
  - name: http
    protocol: HTTP
    port: 80
